--- a/style.css
+++ b/style.css
@@ -4,12 +4,14 @@
   box-sizing: border-box;
   font-family: 'Lato', sans-serif;
 }
+
 body {
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
 }
+
 a,
 li,
 button {
@@ -18,7 +20,7 @@ button {
   list-style: none;
 }
 
-a{
+a {
   color: #272a31;
 }
 
@@ -29,16 +31,21 @@ header {
   flex-direction: row;
   justify-content: space-between;
   background-color: #fff;
-  box-shadow: rgba(0, 0, 0, 0.09) 0px 2px 1px, rgba(0, 0, 0, 0.09) 0px 4px 2px,
-    rgba(0, 0, 0, 0.09) 0px 8px 4px, rgba(0, 0, 0, 0.09) 0px 16px 8px,
-    rgba(0, 0, 0, 0.09) 0px 32px 16px;
+  box-shadow:
+    rgba(0, 0, 0, 0.09) 0 2px 1px,
+    rgba(0, 0, 0, 0.09) 0 4px 2px,
+    rgba(0, 0, 0, 0.09) 0 8px 4px,
+    rgba(0, 0, 0, 0.09) 0 16px 8px,
+    rgba(0, 0, 0, 0.09) 0 32px 16px;
 }
+
 .home {
   background: url(./Images/backgroundHeader.png);
   width: 100%;
   padding-left: 20%;
-height: 800px;
+  height: 800px;
 }
+
 .title {
   height: 40px;
   text-align: center;
@@ -51,6 +58,7 @@ height: 800px;
   font-weight: 700;
   font-size: 22px;
 }
+
 .home h3 {
   font-size: 50px;
   font-weight: lighter;
@@ -59,6 +67,7 @@ height: 800px;
   padding-left: 30px;
   padding-right: 30px;
 }
+
 .home .banner h1 {
   font-size: 10vh;
   font-weight: bolder;
@@ -69,12 +78,27 @@ height: 800px;
   padding-left: 30px;
   max-width: 830px;
 }
+
 .nav-menu {
   display: flex;
   flex-direction: row;
   gap: 100px;
   margin-top: 25px;
   font-size: 15px;
+}
+
+.program a {
+  color: #fff;
+  padding: 25px;
+  font-size: 18px;
+  text-decoration-line: overline;
+}
+
+.program a:hover {
+  color: #ec5242;
+  padding: 30px;
+  font-size: 22px;
+  text-decoration-line: underline;
 }
 
 .nav-menu .nav-menu-items:hover,
@@ -96,23 +120,31 @@ height: 800px;
   font-size: 18px;
 }
 
-
 .header-button {
   margin-top: 15px;
   height: 40px;
-  margin-right: 15px;
   padding: 10px;
   color: #ec5242;
-  box-shadow: rgba(50, 50, 93, 0.25) 0px 30px 60px -12px inset,
-    rgba(0, 0, 0, 0.3) 0px 18px 36px -18px inset;
+  box-shadow:
+    rgba(50, 50, 93, 0.25) 0 30px 60px -12px inset,
+    rgba(0, 0, 0, 0.3) 0 18px 36px -18px inset;
+  border: 5px solid #ec5242;
+  font-size: 20px;
+  text-align: center;
+  align-content: center;
+  background-color: #fff;
+  margin-right: 100px;
 }
 
 .header-button:hover {
   background-color: #ec5242;
   color: #fff;
-  box-shadow: rgba(17, 17, 26, 0.1) 0px 8px 24px,
-    rgba(17, 17, 26, 0.1) 0px 16px 56px, rgba(17, 17, 26, 0.1) 0px 24px 80px;
+  box-shadow:
+    rgba(17, 17, 26, 0.1) 0 8px 24px,
+    rgba(17, 17, 26, 0.1) 0 16px 56px,
+    rgba(17, 17, 26, 0.1) 0 24px 80px;
 }
+
 .banner {
   width: 100%;
   height: 39vh;
@@ -121,32 +153,6 @@ height: 800px;
   left: 0;
   margin-top: 13vh;
 }
-
-.header-button {
-  border: 5px solid #ec5242;
-  padding: 5px;
-  font-size: 20px;
-  text-align: center;
-  align-content: center;
-  background-color: #fff;
-  margin-right: 100px;
-}
-
-.dateplace {
-  font-size: 30px;
-  color: #272a31;
-}
-
-.desc {
-
-    font-size: 20px;
-    color: #3c3f46;
-    background-color: #f7f7f8;
-    padding: 10px;
-    margin: 10px;
-    border: 4px solid #fff;
-    width: 60%;
-  }
 
 .dateplace {
   display: flex;
@@ -157,13 +163,24 @@ height: 800px;
   font-size: 18px;
 }
 
-.dateplace h3{
+.desc {
+  font-size: 20px;
+  color: #3c3f46;
+  background-color: #f7f7f8;
+  padding: 10px;
+  margin: 10px;
+  border: 4px solid #fff;
+  width: 60%;
+}
+
+.dateplace h3 {
   margin: 0;
   padding: 0;
   color: #3c3f46;
   font-size: 30px;
   font-weight: 700;
 }
+
 .program {
   background-image: url(./Images/backgroundHeaderAbout.png);
   background-color: #272a31;
@@ -174,6 +191,7 @@ height: 800px;
   justify-content: center;
   height: 400px;
 }
+
 .cards {
   display: flex;
   flex-direction: row;
@@ -196,7 +214,7 @@ height: 800px;
   font-size: 20px;
 }
 
-.program h2{
+.program h2 {
   color: #fff;
 }
 
@@ -210,18 +228,4 @@ height: 800px;
   font-size: 12px;
   text-align: center;
   color: #fff;
-}
-
-.program a{
-  color: #fff;
-  padding: 25px;
-  font-size: 18px;
-  text-decoration-line: overline;
-}
-
-.program a:hover{
-  color: #ec5242;
-  padding: 30px;
-  font-size: 22px;
-  text-decoration-line: underline;
 }
