--- a/style.css
+++ b/style.css
@@ -1,65 +1,143 @@
+.nav-top-desktop {
+  display: none;
+}
+
+.line {
+  color: #ec5242;
+  font-size: 20px;
+}
+
+.line:hover {
+  color: #ec5242;
+  font-size: 20px;
+  transform: scale(1.5);
+  transition-duration: 0.5s ;
+}
+
 * {
   margin: 0;
   padding: 0;
-  box-sizing: border-box;
   font-family: 'Lato', sans-serif;
 }
 
-body {
+.sponsors > * {
+  padding: 10px;
+  cursor: pointer;
+}
+
+.presentation-container-footer > * {
+  text-align: center;
+  font-size: 12px;
+  padding-bottom: 10px;
+}
+
+.last-meetings > * {
+  color: #fff;
+}
+
+.nav-wrapper {
+  display: none;
+  position: fixed;
+  top: 0;
+  flex-direction: column;
+  height: 100vh;
+  width: 100%;
+  background-color: #d3d3d342;
+  backdrop-filter: blur(20px);
+}
+
+.close-button {
+  font-size: 30px;
+  padding: 20px;
+  color: #000;
+}
+
+.nav-wrapper div {
   display: flex;
   flex-direction: column;
-  justify-content: center;
   align-items: center;
 }
 
-a,
-li,
-button {
+.nav-wrapper div > * {
   text-decoration: none;
-  outline: none;
+  color: #272a31;
+  font-size: 40px;
+  margin: 30px;
+}
+
+.nav-wrapper a:hover {
+  color: #ec5242;
+  transition-duration: 0.5s;
+}
+
+li {
   list-style: none;
 }
 
-a {
-  color: #272a31;
+.nav-wrapper-desktop {
+  display: none;
 }
 
-header {
-  height: 80px;
-  width: 100%;
+.nav-top-mobile {
+  display: flex;
+  position: relative;
+  background-color: #fff;
+  padding: 15px 0;
+  justify-content: space-between;
+}
+
+.nav-top-mobile img {
+  max-height: 51px;
+  cursor: pointer;
+}
+
+.nav-top-mobile span{
   display: flex;
   flex-direction: row;
   justify-content: space-between;
-  background-color: #fff;
-  box-shadow:
-    rgba(0, 0, 0, 0.09) 0 2px 1px,
-    rgba(0, 0, 0, 0.09) 0 4px 2px,
-    rgba(0, 0, 0, 0.09) 0 8px 4px,
-    rgba(0, 0, 0, 0.09) 0 16px 8px,
-    rgba(0, 0, 0, 0.09) 0 32px 16px;
-}
-
-.home {
-  background: url(./Images/backgroundHeader.png);
   width: 100%;
-  padding-left: 20%;
-  height: 800px;
+}
+.nav-top-mobile button {
+  background: none;
+  border: none;
+  position: fixed;
+  font-size: 30px;
+  left: 3%;
+  top: 3%;
+  color: #272a31;
+  cursor: pointer;
 }
 
-.title {
-  height: 40px;
-  text-align: center;
-  justify-content: center;
-  display: flex !important;
-  align-content: center;
-  align-items: center;
-  margin-top: 15px;
-  margin-left: 15px;
-  font-weight: 700;
-  font-size: 22px;
+.speakers button {
+  display: block;
+  background-color: transparent;
+  border: 1px solid #d3d3d3;
+  padding: 20px;
+  width: 90%;
+  cursor: pointer;
 }
 
-.home h3 {
+.main-program button {
+  background-color: #ec5242;
+  font-size: 16px;
+  padding: 30px 40px;
+  border-radius: 2px;
+  color: #fff;
+  border: none;
+}
+
+.nav-top-mobile button:hover {
+  color: #ec5242;
+}
+
+.presentation-container {
+  background-image: url(Images/backgroundHeader.png);
+  display: flex;
+  flex-direction: column;
+  max-height: max-content;
+}
+
+.presentation-container h3 {
   font-size: 50px;
   font-weight: lighter;
   color: #ec5242;
@@ -68,8 +146,8 @@ header {
   padding-right: 30px;
 }
 
-.home .banner h1 {
-  font-size: 10vh;
+.presentation-container h1 {
+  font-size: 15vw;
   font-weight: bolder;
   background-clip: unset;
   -webkit-background-clip: text;
@@ -79,153 +157,552 @@ header {
   max-width: 830px;
 }
 
-.nav-menu {
-  display: flex;
-  flex-direction: row;
-  gap: 100px;
-  margin-top: 25px;
-  font-size: 15px;
-}
-
-.program a {
-  color: #fff;
-  padding: 25px;
-  font-size: 18px;
-  text-decoration-line: overline;
-}
-
-.program a:hover {
-  color: #ec5242;
-  padding: 30px;
-  font-size: 22px;
-  text-decoration-line: underline;
-}
-
-.nav-menu .nav-menu-items:hover,
-.nav-menu .nav-menu-items:active,
-.nav-menu .nav-menu-items:focus {
-  cursor: pointer;
-  color: #ec5242;
-  font-size: 18px;
-}
-
-.nav-menu .nav-menu-items:hover,
-.nav-menu .nav-menu-items:active,
-.nav-menu .nav-menu-items:focus,
-.nav-menu .nav-menu-items a:hover,
-.nav-menu .nav-menu-items a:active,
-.nav-menu .nav-menu-items a:focus {
-  cursor: pointer;
-  color: #ec5242;
-  font-size: 18px;
-}
-
-.header-button {
-  margin-top: 15px;
-  height: 40px;
-  padding: 10px;
-  color: #ec5242;
-  box-shadow:
-    rgba(50, 50, 93, 0.25) 0 30px 60px -12px inset,
-    rgba(0, 0, 0, 0.3) 0 18px 36px -18px inset;
-  border: 5px solid #ec5242;
-  font-size: 20px;
-  text-align: center;
-  align-content: center;
-  background-color: #fff;
-  margin-right: 100px;
-}
-
-.header-button:hover {
-  background-color: #ec5242;
-  color: #fff;
-  box-shadow:
-    rgba(17, 17, 26, 0.1) 0 8px 24px,
-    rgba(17, 17, 26, 0.1) 0 16px 56px,
-    rgba(17, 17, 26, 0.1) 0 24px 80px;
-}
-
-.banner {
-  width: 100%;
-  height: 39vh;
-  justify-content: start;
-  align-items: left;
-  left: 0;
-  margin-top: 13vh;
-}
-
-.dateplace {
-  display: flex;
-  flex-direction: column;
-  color: #3c3f46;
-  padding-left: 30px;
-  padding-right: 30px;
-  font-size: 18px;
-}
-
-.desc {
-  font-size: 20px;
-  color: #3c3f46;
+.main-description {
+  font-size: 13px;
+  color: #272a31;
   background-color: #f7f7f8;
   padding: 10px;
   margin: 10px;
   border: 4px solid #fff;
-  width: 60%;
 }
 
-.dateplace h3 {
-  margin: 0;
-  padding: 0;
-  color: #3c3f46;
+.presentation-container .div-presentation {
+  display: flex;
+  flex-direction: column;
+  color: #272a31;
+  padding-left: 30px;
+  padding-right: 30px;
+  padding-bottom: 100px;
+}
+
+.presentation-container h2 {
+  font-weight: bolder;
   font-size: 30px;
-  font-weight: 700;
+  margin-bottom: 10px;
 }
 
-.program {
-  background-image: url(./Images/backgroundHeaderAbout.png);
+.main-program {
+  background-image: url(Images/patternBackground.png);
   background-color: #272a31;
-  width: 100%;
-  align-items: center;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  height: 400px;
-}
-
-.cards {
-  display: flex;
-  flex-direction: row;
-  gap: 20px;
-}
-
-.card {
-  display: flex;
-  flex-direction: column;
-  width: 200px;
-  border: 3px solid green;
-  padding: 10px;
-  justify-content: center;
-  align-items: center;
-  background-color: #3c3f46;
-}
-
-.line {
-  color: #ec5242;
-  font-size: 20px;
-}
-
-.program h2 {
   color: #fff;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding-top: 70px;
+  padding-bottom: 70px;
 }
 
-.program h4 {
+.main-schedule {
+  margin: 30px 0;
+  width: 100%;
+}
+
+.main-program article {
+  display: flex;
+  padding: 10px;
+  max-width: 100%;
+  margin: 10px;
+  background-color: #97979738;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.main-program article:hover {
+  transform: scale(1.05);
+  box-shadow: 0 0 2px #ec5242;
+  transition-duration: 0.5s;
+}
+
+.main-program article > * {
+  margin: 10px;
+}
+
+.main-program h4 {
   color: #ec5242;
   font-size: 16px;
   min-width: 72px;
 }
 
-.program p {
+.main-program p {
   font-size: 12px;
   text-align: center;
-  color: #fff;
 }
+
+.main-program button:hover {
+  transition-duration: 0.5s;
+  text-decoration: overline;
+  transform: scale(1.3);
+}
+
+.speakers {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 20px 0;
+}
+
+.speakers img {
+  width: 150px;
+}
+
+.speakers h3 {
+  font-size: 29px;
+}
+
+.speaker-footer {
+  font-size: 12px;
+  color: #ec5242;
+  font-style: italic;
+}
+
+.speaker-description {
+  color: #272a31;
+}
+
+.speaker-information {
+  display: flex;
+  align-items: center;
+  padding: 10px;
+}
+
+.speaker-information div {
+  min-height: 200px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  padding-left: 15px;
+}
+
+.speakers button:hover {
+  border: 1px solid #ec5242;
+  transform: scale(1.05);
+  color: #ec5242;
+  transition-duration: 0.5s;
+}
+
+.button-speaker-action {
+  display: none;
+}
+
+.partner {
+  display: none;
+  flex-direction: column;
+  align-items: center;
+  background-color: #272a31;
+  color: #fff;
+  padding-top: 30px;
+}
+
+.sponsors {
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+  align-items: center;
+  padding: 20px;
+}
+
+.sponsors li:hover {
+  color: #ec5242;
+  transform: scale(1.03);
+  transition-duration: 0.5s;
+}
+
+.mozilla {
+  font-size: 34px;
+  color: #d3d3d398;
+}
+
+.google {
+  font-size: 29px;
+  color: #7e7e7ea2;
+  font-weight: lighter;
+}
+
+.naver {
+  font-size: 30px;
+  color: #d3d3d398;
+  font-weight: bolder;
+}
+
+.daumkakao {
+  font-size: 22px;
+  color: #7e7e7ea2;
+  font-weight: lighter;
+}
+
+.airbnb {
+  font-size: 25px;
+  color: #d3d3d398;
+}
+
+footer {
+  display: flex;
+  justify-content: space-around;
+  background-color: #fff;
+  color: #000;
+  width: 100%;
+  padding: 50px 20px;
+  align-items: center;
+
+}
+
+.image-footer img {
+  max-height: 51px;
+  cursor: pointer;
+  margin: 0 40px;
+}
+
+.footer-information {
+  font-size: 12px;
+  padding-right: 30px;
+}
+
+.presentation-container-about {
+  background-image: url(Images/backgroundHeaderAbout.png);
+  background-repeat: no-repeat;
+  background-color: #f7f7f8;
+  display: flex;
+  flex-direction: column;
+  max-height: max-content;
+  align-items: center;
+}
+
+.presentation-container-about h3 {
+  font-size: 35px;
+  font-weight: lighter;
+  text-align: center;
+  color: #ec5242;
+  padding-top: 40px;
+  padding-left: 30px;
+  padding-right: 30px;
+}
+
+.presentation-container-about h1 {
+  font-size: 9vw;
+  text-align: center;
+  font-weight: bolder;
+  color: #ec5242;
+  max-width: 830px;
+  padding-left: 20px;
+  padding-right: 20px;
+}
+
+.main-description-about {
+  font-size: 13px;
+  color: #272a31;
+  background-color: #fff;
+  padding: 20px;
+  margin: 20px;
+  border: 1px solid #d3d3d3;
+}
+
+.presentation-container-footer {
+  color: #272a31;
+  display: flex;
+  flex-direction: column;
+  max-width: 60%;
+  align-items: center;
+}
+
+.presentation-container-footer h4 {
+  text-decoration: underline;
+  padding-bottom: 40px;
+}
+
+.creative-commons {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  border-bottom: 1px solid #ddd;
+  padding: 30px;
+}
+
+.creative-commons h2 {
+  max-width: 85%;
+  text-align: center;
+  padding-bottom: 20px;
+}
+
+.creative-commons p {
+  max-width: 95%;
+  text-align: center;
+  padding-bottom: 40px;
+  color: #272a31;
+}
+
+.creative-commons img {
+  border: 1px solid #ddd;
+  padding: 0 100px;
+  max-width: 40%;
+}
+
+.see-past {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 30px 0;
+}
+
+.see-past h2 {
+  max-width: 85%;
+  text-align: center;
+  padding-bottom: 20px;
+}
+
+.text-past {
+  max-width: 95%;
+  text-align: center;
+  padding-bottom: 40px;
+  color: #272a31;
+}
+
+.last-meetings {
+  width: 100%;
+  height: 200px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  background-color: #ec5342a2;
+}
+
+.last-meetings h3 {
+  font-size: 40px;
+  padding-bottom: 10px;
+}
+
+.meet-container {
+  display: flex;
+  flex-direction: column;
+  width: 90%;
+}
+
+.meet-container article:hover {
+  transform: scale(1.05);
+  transition-duration: 0.5s;
+}
+
+.first-meet {
+  background-image: url(Images/firstMeet.png);
+  background-repeat: no-repeat;
+  min-width: 90%;
+  margin-bottom: 20px;
+}
+
+.second-meet {
+  background-image: url(Images/secondMeet.jpg);
+  background-repeat: no-repeat;
+  min-width: 90%;
+  margin-bottom: 20px;
+}
+
+.partner-setup {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  background-color: #272a31;
+  color: #fff;
+  padding-top: 30px;
+}
+
+@media only screen and (min-width: 768px) {
+  .nav-top-desktop {
+    display: flex;
+    justify-content: flex-end;
+    background-color: #272a31;
+    color: #fff;
+    min-height: 30px;
+    align-items: center;
+  }
+
+  .nav-top-desktop ul {
+    display: flex;
+    padding-right: 60px;
+    gap: 20px;
+  }
+
+  .nav-top-desktop li {
+    cursor: pointer;
+  }
+
+  .nav-top-desktop li:hover {
+    color: #ec5242;
+    transition-duration: 0.4s;
+  }
+
+  .nav-top-mobile {
+    display: none;
+  }
+
+  .nav-wrapper-desktop {
+    display: flex;
+    align-items: center;
+    padding: 20px;
+    justify-content: space-evenly;
+    /* margin-left: 20%; */
+  }
+
+  .nav-wrapper-desktop img {
+    width: 51px;
+    padding: 0 20%;
+    cursor: pointer;
+  }
+
+  .nav-wrapper-desktop div {
+    width: 60%;
+    display: flex;
+    justify-content: space-around;
+  }
+
+  .nav-wrapper-desktop a {
+    color: #272a31;
+    text-decoration: none;
+  }
+
+  .nav-wrapper-desktop a:hover,
+    .nav-wrapper-desktop a:focus {
+    color: #ec5242;
+    transform: scale(1.2);
+  }
+
+  .nav-wrapper-desktop a:nth-child(6):hover {
+    color: #ec5242;
+    border: 1px solid #ec5242;
+    padding: 5px;
+    border-radius: 5px;
+    transform: scale(1);
+  }
+
+  .presentation-container h1 {
+    font-size: 70px;
+    font-weight: bolder;
+    background-clip: unset;
+    -webkit-background-clip: text;
+    color: transparent;
+    background-image: url(Images/textbg.jpg);
+    padding-left: 10%;
+    max-width: 740px;
+  }
+
+  .presentation-container h3 {
+    padding-top: 130px;
+    padding-left: 10%;
+  }
+
+  .main-description {
+    font-size: 13px;
+    color: #272a31;
+    background-color: #f7f7f8;
+    padding-left: 10px;
+    margin-left: 10%;
+    margin-top: 40px;
+    margin-bottom: 40px;
+    max-width: 650px;
+  }
+
+  .main-program button {
+    background: none;
+    text-decoration: underline;
+  }
+
+  .speakers button {
+    display: none;
+  }
+
+  .main-program button:hover {
+    color: #ec5242;
+  }
+
+  .presentation-container .div-presentation {
+    padding-left: 10%;
+    padding-bottom: 130px;
+  }
+
+  .main-program article {
+    display: flex;
+    flex-direction: column;
+    padding: 10px;
+    width: 20%;
+    max-width: 200px;
+    margin: 10px;
+    background-color: #97979738;
+    align-items: center;
+    justify-content: space-between;
+  }
+
+  .main-schedule {
+    margin: 30px 0;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+  }
+
+  .speakers-div {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    max-width: 1000px;
+  }
+
+  .speaker-information {
+    width: 47%;
+  }
+
+  .partner {
+    display: flex;
+  }
+
+  .button-speaker-action {
+    display: flex;
+  }
+
+  .presentation-container-about h3 {
+    display: none;
+  }
+
+  .presentation-container-about h1 {
+    font-size: 70px;
+    padding-top: 130px;
+  }
+
+  .main-description-about {
+    max-width: 560px;
+    text-align: center;
+    margin: 50px 0;
+  }
+
+  .presentation-container-footer {
+    margin-bottom: 130px;
+  }
+
+  .meet-container {
+    flex-direction: row;
+    max-width: 800px;
+    gap: 20px;
+    padding-bottom: 130px;
+  }
+
+  .first-meet {
+    min-width: 50%;
+  }
+
+  .second-meet {
+    min-width: 50%;
+  }
+
+  .partner-setup h2 {
+    display: none;
+  }
+
+  .partner-setup .sponsors {
+    display: none;
+  }
+
+  .partner-setup footer {
+    color: #fff;
+    background-color: transparent;
+  }
+
+}
+
+
