--- a/style.css
+++ b/style.css
@@ -80,7 +80,7 @@ li {
 
 .nav-top-mobile {
   display: flex;
-  position: relative;
+  position: fixed;
   background-color: #fff;
   padding: 15px 0;
   justify-content: space-between;
@@ -138,18 +138,19 @@ li {
   max-height: max-content;
 }
 
-.presentation-container h3 {
+
+.presentation-container h1 {
   font-size: 50px;
   font-weight: lighter;
   color: #ec5242;
-  padding-top: 40px;
+  padding-top: 90px;
   padding-left: 30px;
   padding-right: 30px;
 }
 
-.presentation-container h1 {
-  font-size: 15vw;
-  font-weight: bolder;
+.presentation-container h3 {
+  font-size: 10vw;
+  font-weight: bold;
   background-clip: unset;
   -webkit-background-clip: text;
   color: transparent;
@@ -286,7 +287,7 @@ li {
 }
 
 .partner {
-  display: none;
+  display: none !important;
   flex-direction: column;
   align-items: center;
   background-color: #272a31;
@@ -367,7 +368,7 @@ footer {
   align-items: center;
 }
 
-.presentation-container-about h3 {
+.presentation-container-about h1 {
   font-size: 35px;
   font-weight: lighter;
   text-align: center;
@@ -377,7 +378,7 @@ footer {
   padding-right: 30px;
 }
 
-.presentation-container-about h1 {
+.presentation-container-about h3 {
   font-size: 9vw;
   text-align: center;
   font-weight: bolder;
@@ -544,8 +545,9 @@ footer {
   }
 
   .nav-wrapper-desktop img {
-    width: 51px;
-    padding: 0 20%;
+    width: 200px;
+    height: 70px;
+    padding: 0 15%;
     cursor: pointer;
   }
 
@@ -574,7 +576,7 @@ footer {
     transform: scale(1);
   }
 
-  .presentation-container h1 {
+  .presentation-container h3 {
     font-size: 70px;
     font-weight: bolder;
     background-clip: unset;
@@ -585,7 +587,7 @@ footer {
     max-width: 740px;
   }
 
-  .presentation-container h3 {
+  .presentation-container h1 {
     padding-top: 130px;
     padding-left: 10%;
   }
@@ -702,5 +704,13 @@ footer {
   .partner-setup footer {
     color: #fff;
     background-color: transparent;
+  }
+
+  .partner {
+    display: flex !important;
+  }
+
+  .footerimage{
+    color: #272a31;
   }
 }
