--- a/style.css
+++ b/style.css
@@ -39,9 +39,9 @@
 .nav-wrapper {
   display: none;
   position: fixed;
-  top: 0;
+  top: -5px;
   flex-direction: column;
-  height: 100vh;
+  height: 105vh;
   width: 100%;
   background-color: #d3d3d342;
   backdrop-filter: blur(20px);
@@ -57,12 +57,13 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  font-size: 20px;
 }
 
 .nav-wrapper div > * {
   text-decoration: none;
   color: #272a31;
-  font-size: 40px;
+  font-size: 20px;
   margin: 30px;
 }
 
